# ai_agent_test_case

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  main.py
app/agent/: __init__.py  loop.py  prompts.py  schemas.py  state.py
app/browser/: __init__.py  actionability.py  content_extractor.py  dom_extractor.py  selector_builder.py  session.py
app/llm/: __init__.py  claude_client.py  client.py  openai_client.py  tool_use.py
app/safety/: __init__.py  guard.py  prompt_injection.py  risk_classifier.py
app/subagents/: __init__.py  content_agent.py  dom_agent.py  vision_agent.py
app/tools/: __init__.py  content.py  control.py  dom_query.py  interactions.py  navigation.py  observations.py  registry.py  schemas.py  tabs.py  vision.py
app/utils/: logger.py  truncate.py
tests/: __init__.py  test_agent_loop.py  test_agent_state.py  test_browser_session_tabs.py  test_browser_tools_errors.py  test_claude_tool_use.py  test_cli_session.py  test_click_diagnostics.py  test_config.py  test_content_agent.py  test_content_extractor.py  test_content_tool.py  test_dom_agent.py  test_dom_extractor.py  test_dom_query_tool.py  test_observation_limits.py  test_openai_tool_use.py  test_page_state_tools.py  test_prompt_injection.py  test_safety.py  test_tabs.py  test_tool_registry.py  test_truncate.py  test_type_text_fallback.py  test_vision_agent.py
