[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "browser-ai-agent"
version = "0.1.0"
description = "CLI skeleton for an autonomous browser AI agent."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.64,<1.0",
    "openai>=2.0,<3.0",
    "playwright>=1.45,<2.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "rich>=13.7,<14.0",
    "typer>=0.12,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9.0",
    "pytest-asyncio>=0.23,<1.0",
]

[project.scripts]
browser-ai-agent = "app.main:cli"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
